feat: fix API
Signed-off-by: Ashish Thakur <ashishth@redhat.com>